--- a/.github/workflows/.yml
+++ b/.github/workflows/.yml
@@ -22,9 +22,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install python-telegram-bot
+        pip install python-Telegram_auto_bot
 
-    - name: Run Telegram Bot
+    - name: Run Telegram_auto_bot
       env:
         BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
       run: python Telegram_auto_bot.py
